# torch-dataset

./: .travis.yml  CMakeLists.txt  README.md  dataset-scm-1.rockspec
examples/: cifar10.lua  mnist.lua
lua/: Batch.lua  Cache.lua  Dataset.lua  Getters.lua  Index.lua  IndexCSV.lua  IndexDirectory.lua  IndexSlowFS.lua  IndexTensor.lua  IndexUtils.lua  Reader.lua  Sampler.lua  SlowFS.lua  SlowFSStream.lua  StreamedDataset.lua
src/: dataset.c
test/: TestUtils.lua  index-files.csv  index.csv  index1.csv  index2-meta.csv  index2.csv  index3.csv  index4.csv  nolabels.csv  test.lua  test_Cache.lua  test_Dataset.lua  test_Getters.lua  test_Index.lua  test_Reader.lua  test_Sampler.lua  test_StreamedDataset.lua  test_offsets.lua
test/files/: 3.txt
test/hdfs/: blockreader
test/hdfs/files/: part-r-00000  part-r-00001  part-r-00002  part-r-00003
